{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 15,
  "lineage": "564db39e-65c0-6986-375d-21850f8b61db",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/algebraic-road-458913-q9/regions/asia-east1/instanceGroups/appserver-igm-asia",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 1,
                "max_utilization": 0
              },
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/algebraic-road-458913-q9/regions/us-central1/instanceGroups/appserver-igm-us",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 1,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-05-30T06:44:17.245-07:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "_HmzH1r6-ZY=",
            "generated_id": 398034813024733406,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/algebraic-road-458913-q9/global/httpHealthChecks/http-health-check"
            ],
            "id": "projects/algebraic-road-458913-q9/global/backendServices/backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend",
            "port_name": "http",
            "project": "algebraic-road-458913-q9",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/algebraic-road-458913-q9/global/backendServices/backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_http_health_check.default",
            "google_compute_instance_template.default",
            "google_compute_network.vpc_projeto",
            "google_compute_region_instance_group_manager.appserver-asia",
            "google_compute_region_instance_group_manager.appserver-us"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-default-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-05-30T06:43:40.373-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/algebraic-road-458913-q9/global/firewalls/vpc-ex01-allow-default-ports",
            "log_config": [],
            "name": "vpc-ex01-allow-default-ports",
            "network": "https://www.googleapis.com/compute/v1/projects/algebraic-road-458913-q9/global/networks/vpc-ex01",
            "priority": 1000,
            "project": "algebraic-road-458913-q9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/algebraic-road-458913-q9/global/firewalls/vpc-ex01-allow-default-ports",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "webapps"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_projeto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 5789495135000856720,
            "id": "projects/algebraic-road-458913-q9/global/forwardingRules/global-rule",
            "ip_address": "34.36.253.47",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "global-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "algebraic-road-458913-q9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/algebraic-road-458913-q9/global/forwardingRules/global-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/algebraic-road-458913-q9/global/targetHttpProxies/teste-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_http_health_check.default",
            "google_compute_instance_template.default",
            "google_compute_network.vpc_projeto",
            "google_compute_region_instance_group_manager.appserver-asia",
            "google_compute_region_instance_group_manager.appserver-us",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_projeto",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/algebraic-road-458913-q9/global/networks/vpc-ex01",
            "mtu": 0,
            "name": "vpc-ex01",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "2998913715804572430",
            "numeric_id": "2998913715804572430",
            "project": "algebraic-road-458913-q9",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/algebraic-road-458913-q9/global/networks/vpc-ex01"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-30T06:45:22.579-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/algebraic-road-458913-q9/global/targetHttpProxies/teste-proxy",
            "name": "teste-proxy",
            "project": "algebraic-road-458913-q9",
            "proxy_bind": false,
            "proxy_id": 8744846072495736989,
            "self_link": "https://www.googleapis.com/compute/v1/projects/algebraic-road-458913-q9/global/targetHttpProxies/teste-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/algebraic-road-458913-q9/global/urlMaps/urls-map-target-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_http_health_check.default",
            "google_compute_instance_template.default",
            "google_compute_network.vpc_projeto",
            "google_compute_region_instance_group_manager.appserver-asia",
            "google_compute_region_instance_group_manager.appserver-us",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-30T06:45:10.577-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/algebraic-road-458913-q9/global/backendServices/backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "ryNvpGnlPx0=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/algebraic-road-458913-q9/global/urlMaps/urls-map-target-proxy",
            "map_id": 2747359134840260745,
            "name": "urls-map-target-proxy",
            "path_matcher": [],
            "project": "algebraic-road-458913-q9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/algebraic-road-458913-q9/global/urlMaps/urls-map-target-proxy",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_http_health_check.default",
            "google_compute_instance_template.default",
            "google_compute_network.vpc_projeto",
            "google_compute_region_instance_group_manager.appserver-asia",
            "google_compute_region_instance_group_manager.appserver-us"
          ]
        }
      ]
    }
  ]
}